fixed modal z-index

--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -1,78 +1,28 @@
-.about {
-    z-index: 9999;
-    margin: auto;
-    position: absolute;
-    padding: 15px;
-    padding-top: 0;
-    top: 0;
-    left:  20%;
-    width: 60%;
-    height: 100%;
-    z-index: 1000;
-    background: #ffffff;
-    box-shadow: 0 0 10px rgba(0,0,0,0.6);
-    -moz-box-shadow: 0 0 10px rgba(0,0,0,0.6);
-    -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.6);
-    -o-box-shadow: 0 0 10px rgba(0,0,0,0.6);
-    overflow:  auto;
-    -webkit-overflow-scrolling: touch;
-    
+.modal-overylay {
+  z-index: 999;
 }
 
-.aboutDisplay {
-    text-align: center;
-    
+.modal-container {
+}
+.about-modal {
+  z-index: 9999;
+  margin: auto;
+  position: absolute;
+  padding: 15px;
+  padding-top: 0;
+  top: 0;
+  left: 20%;
+  width: 60%;
+  height: 100%;
+  background: #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+  -o-box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
-.about:focus{
-    outline: 0;
-}
-
-.about h2{
-    color: #313131 !important;
-    text-align: center;
-    white-space:pre-line;
-}
-
-.buttonClose {
-    border: none;
-    font-size: 20px;
-}
-
-.buttonClose .fa-fw{
-    position: absolute; 
-    right: 10px;
-}
-.center {
-    margin: auto;
-    border-collapse: collapse;
-}
-.center th {
-    padding: 10px;
-    background: #04A7F9;
-    color: #ffffff;
-}
-.center td{
-    border-bottom: 1px solid #0181C2;
-    padding: 5px;
-}
-
-
-@media(max-width: 48em){
-    .weather{
-        left: 15%;
-    }
-}
-
-@media(max-width: 30em){
-    .weather{
-        left: 1.5%;
-        top: 15%;
-        width: 90%;
-        padding: 10px;
-    }
-}
-
-.modal-overlay {
-    z-index: 1000;
+.about-modal:focus {
+  outline: 0;
 }
