--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -7,5 +7,5 @@
 }
 
 .location-search {
-  z-index: 9999;
+  z-index: 10;
 }
